home page responsive alignments fix

--- a/app/design/frontend/Shopcsn/Store/web/css/source/style/_button.less
+++ b/app/design/frontend/Shopcsn/Store/web/css/source/style/_button.less
@@ -32,7 +32,7 @@
 .page-main , .modals-wrapper, .block-minicart .block-content{
     .heading-sec .btn-view,
      button.action,
-     a.action,
+     a.btn-action,
     .quick-view,
     .box-gotoproduct .action,
     a.viewcart, a.checkout {
